tests/ui/never_type/fallback_change/diverging-fallback-unconstrained-return.fallback.stderr
error[E0277]: the trait bound `!: UnitReturn` is not satisfied
  --> $DIR/diverging-fallback-unconstrained-return.rs:37:23
   |
LL |     let _ = if true { unconstrained_return() } else { panic!() };
   |                       ^^^^^^^^^^^^^^^^^^^^^^ the trait `UnitReturn` is not implemented for `!`
   |
help: the following other types implement trait `UnitReturn`
  --> $DIR/diverging-fallback-unconstrained-return.rs:15:1
   |
LL | impl UnitReturn for i32 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ `i32`
LL | impl UnitReturn for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^ `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #148922 <https://github.com/rust-lang/rust/issues/148922> for more information)
   = help: you might have intended to use the type `()` here instead
note: required by a bound in `unconstrained_return`
  --> $DIR/diverging-fallback-unconstrained-return.rs:18:28
   |
LL | fn unconstrained_return<T: UnitReturn>() -> T {
   |                            ^^^^^^^^^^ required by this bound in `unconstrained_return`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
